--- a/Settings.json
+++ b/Settings.json
@@ -1,5 +1,5 @@
 {
-  //Localització del archiu : C:\Users\USUARIO\AppData\Roaming\Code\User\settings.json
+  //Localización del archivo : C:\Users\USUARIO\AppData\Roaming\Code\User\settings.json
   
   //Paso1. Instalar extension en VSCODE "REMOTE WSL" y "Powershell" , ademas, instalar Ubuntu 20.04 en la tienda de Windows 10.
    
