--- a/Settings.json
+++ b/Settings.json
@@ -4,8 +4,11 @@
   //Paso1. Instalar extension en VSCODE "REMOTE WSL", "Shell Launcher" y "Powershell" , ademas, instalar Ubuntu 20.04 en la tienda de Windows 10.
    
   //Paso2. Instalar Git y Gitbash
+  
+  //Tutorial REMOTE WSL Y UBUNTU 20.04 EN VSCODE
   //Source : https://docs.microsoft.com/es-es/windows/wsl/install-win10
   //Source 2: https://docs.microsoft.com/es-es/windows/wsl/wsl2-kernel
+
   
   //Indicamos los shells a los que queremos tener acceso
   "shellLauncher.shells.windows": [
